# rust-aws-cli

./: README.md
aws-cli-tools/: Cargo.toml
aws-cli-tools/src/: main.rs
